package com.example.keystone_try.pedometer;

public interface StepListener {
    public void onStep();
}
