@startuml

title __PEDOMETER's Class Diagram__\n

  namespace com.example.keystone_try {
    namespace pedometer {
      class com.example.keystone_try.pedometer.StepDetector {
          - mLastDiff : float[]
          - mLastDirections : float[]
          - mLastExtremes : float[][]
          - mLastMatch : int
          - mLastValues : float[]
          - mLimit : float
          - mScale : float[]
          - mYOffset : float
          + StepDetector()
          + onAccuracyChanged()
          + onSensorChanged()
          + setSensitivity()
          + setStepListener()
      }
    }
  }
  

  namespace com.example.keystone_try {
    namespace pedometer {
      interface com.example.keystone_try.pedometer.StepListener {
          {abstract} + onStep()
      }
    }
  }
  

  namespace com.example.keystone_try {
    namespace pedometer {
      class com.example.keystone_try.pedometer.StepsDetectService {
          {static} + mOnStepDetectListener : OnStepDetectListener
          {static} + steps : int
          - mSensor : Sensor
          - mSensorManager : SensorManager
          + onBind()
          + onCreate()
          + onDestroy()
          + onStartCommand()
          + registerDetector()
          {static} + setOnStepDetectListener()
          + unRegisterDector()
      }
    }
  }
  

  namespace com.example.keystone_try {
    namespace pedometer {
      interface com.example.keystone_try.pedometer.StepsDetectService.OnStepDetectListener {
          {abstract} + onStepDetect()
      }
    }
  }
  

  com.example.keystone_try.pedometer.StepDetector .up.|> android.hardware.SensorEventListener
  com.example.keystone_try.pedometer.StepDetector o-- com.example.keystone_try.pedometer.StepListener : mListener
  com.example.keystone_try.pedometer.StepsDetectService -up-|> android.app.Service
  com.example.keystone_try.pedometer.StepsDetectService o-- com.example.keystone_try.pedometer.StepDetector : mStepDetector
  com.example.keystone_try.pedometer.StepsDetectService +-down- com.example.keystone_try.pedometer.StepsDetectService.OnStepDetectListener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
